# BornHack-Cyberegg

./: .gitignore  .gitmodules  .rustfmt.toml  .woodpecker.yml  CHANGELOG-2026-07-14-to-16.md  CLOCK.md  CONTACTS_SCREEN.md  Cargo.toml  FACTORY.md  FAQ.md  FEATURES.html  GAME.md  GAMES.md  LUT.md  Makefile  NFC_README.md  POCKET_CARD.md  QUICKSTART.md  README.md  SUBMODULES.md  USER_CONTACTS.md  USER_GAMES.md  USER_MESH.md  USER_NFC.md  USER_WATCH.md  build.rs  flake.nix  out.txt
.cargo/: config.toml
.zed/: settings.json
assets/: PETS.CFG.example  bornpets-bartholomeus.json5  bornpets-menu-icons.json5  bornpets-sponsors-slug.json5  bornpets.json5
assets/to-badge/: 000000.PCX  00000000.PCX  002000.PCX  002100.PCX  002200.PCX  002300.PCX  002301.PCX  002400.PCX  002401.PCX  002500.PCX  002501.PCX  002600.PCX  002601.PCX  002700.PCX  002701.PCX  002800.PCX  002801.PCX  01000000.PCX  010601.PCX  010C00.PCX  010C01.PCX  011000.PCX  011002.PCX  011003.PCX  011100.PCX  012000.PCX  012100.PCX  012200.PCX  012300.PCX  012301.PCX  012302.PCX  012303.PCX  012401.PCX  012500.PCX  012501.PCX  012600.PCX  012601.PCX  012700.PCX  012701.PCX  012800.PCX  (+202 more)
bootloader/: Cargo.toml  memory.x
bootloader/.cargo/: config.toml
bootloader/src/: dfu.rs  flash.rs  main.rs  msc.rs  nvmc.rs  storage.rs
firmware/: README.md
scripts/: README.md  bl_factory.py  check_badge_pcx.py  copy_assets.py  dfu_factory.py  fix_badge_pcx.py  gen_battle_placeholders.py  gen_placeholder_pcx.py  png_to_badge_pcx.py
src/: display_flush.rs  lib.rs  lut_file.rs  menu.rs  name_screen.rs  nfc_ndef.rs  signed_channel.rs  text_entry.rs  text_wrap.rs  ui.rs
src/fw/: battery.rs  ble.rs  board.rs  bonds.rs  bornpets_cfg.rs  button.rs  contacts.rs  device_id.rs  emoji.rs  epd.rs  factory_test.rs  fat12.rs  flash.rs  health.rs  i2c_keyboard.rs  iso14443.rs  kv.rs  led.rs  lock.rs  meshcore.rs  mod.rs  msg_queue.rs  nfct.rs  pets_cfg.rs  power.rs  qwiic.rs  settings.rs  sponsors.rs  storage.rs  sx1262.rs  temperature.rs  usb_msc.rs  usb_storage.rs
src/fw/buzzer/: melodies.rs  mod.rs
src/fw/game/: input.rs  mod.rs  modal.rs
src/fw/mesh/: ble.rs  bonds.rs  channel_browser.rs  channels.rs  contacts.rs  contacts_screen.rs  device_identity.rs  discovery.rs  kv.rs  meshcore.rs  mod.rs  msg_queue.rs  people.rs  persister.rs  pm_inbox.rs  repeater.rs  repeater_time.rs  settings.rs  storage.rs  sx1262.rs  text_wrap.rs  time_fmt.rs
src/game/: battle.rs  battle_view.rs  blackhole.rs  bornjeweled.rs  friends.rs  friends_view.rs  health_view.rs  input.rs  lifecycle.rs  lightsout.rs  maze.rs  mod.rs  modal.rs  nav.rs  nim.rs  pet_registry.rs  pet_select.rs  realm_view.rs  settings.rs  sprite_loader.rs  stat_bar.rs  station.rs  tictactoe.rs  traits_view.rs  tripleborn.rs
src/game/engine/: anim_files.rs  drink.rs  food.rs  mod.rs  thresholds.rs  to_display.rs
src/qr_screen/: mod.rs
src/token/: mod.rs
src/watch/: alarm.rs  calendar.rs  clock.rs  ics.rs  mod.rs
tests/: flash_concurrency.rs  game_engine.rs
