[package]
name = "hello-graphics"
version = "0.1.0"
edition = "2024"

[dependencies]
embedded-graphics = { version = "0.8" }

# Simulator libraries go here
embedded-graphics-simulator = { version = "0.8", optional = true }
defmt = { version = "1.0.1", optional = true }

# Embassy dependencies (only when embassy feature is enabled)
fixed = { version = "1.10.0", optional = true }
static_cell = { version = "2", optional = true }
cortex-m = { version = "0.7.6", features = [
    "inline-asm",
    "critical-section-single-core",
], optional = true }
cortex-m-rt = { version = "0.7.0", optional = true }
embassy-futures = { version = "0.1.2", optional = true }
embassy-sync = { version = "0.6", features = ["defmt"], optional = true }
embassy-time = { version = "0.5.0", features = [
    "defmt",
    "defmt-timestamp-uptime",
], optional = true }
embassy-nrf = { version = "0.9.0", features = [
    "defmt",
    "nrf52840",
    "time-driver-rtc1",
    "gpiote",
    "unstable-pac",
    "time",
], optional = true }
embassy-executor = { version = "0.9", features = [
    "arch-cortex-m",
    "executor-thread",
    "executor-interrupt",
    "defmt",
], optional = true }
embassy-embedded-hal = { version = "0.3.2", optional = true }
# embassy-rp = { version = "0.2", features = ["time-driver"], optional = true }
defmt-rtt = { version = "1.0.0", optional = true }
panic-probe = { version = "1.0.0", features = ["print-defmt"], optional = true }
ssd1680 = { version = "0.16", path = "./vendor/ssd1680", optional = true }


[profile.dev]
debug = 2
opt-level = 1
lto = false

[profile.release]
debug = 2
opt-level = "s" # or "z" for even smaller size
lto = true

[features]
# default = ["simulator"]
default = ["embassy"]
simulator = ["embedded-graphics-simulator"]
embassy = [
    "cortex-m",
    "cortex-m-rt",
    "defmt",
    "defmt-rtt",
    "embassy-embedded-hal",
    "embassy-executor",
    "embassy-futures",
    "embassy-nrf",
    "embassy-sync",
    "embassy-time",
    "fixed",
    "panic-probe",
    "ssd1680",
    "static_cell",
]

[workspace]
# harness = false

[lib]
harness = false

[[bin]]
name = "simulator"
path = "src/bin/simulator.rs"
required-features = ["simulator"]


[[bin]]
name = "embassy"
path = "src/bin/embassy.rs"
required-features = ["embassy"]
harness = false
