[package]
name = "hello-graphics"
version = "0.1.0"
edition = "2024"

[dependencies]
embedded-graphics = { version = "0.8" }

# Simulator libraries go here
embedded-graphics-simulator = { version = "0.8", optional = true }
defmt = { version = "1.0.1", optional = true }

# Embassy dependencies (only when embassy feature is enabled)
fixed = { version = "1.10.0", optional = true }
static_cell = { version = "2", optional = true }
cortex-m = { version = "0.7.6", features = [
    "inline-asm",
    "critical-section-single-core",
], optional = true }
cortex-m-rt = { version = "0.7.0", optional = true }
embassy-futures = { version = "0.1.2", optional = true }
embassy-sync = { version = "0.7", features = ["defmt"], optional = true }
embassy-time = { version = "0.5.0", features = [
    "defmt",
    "defmt-timestamp-uptime",
], optional = true }
embassy-nrf = { version = "0.9.0", features = [
    "defmt",
    "nrf52840",
    "time-driver-rtc1",
    "gpiote",
    "unstable-pac",
    "time",
], optional = true }
embassy-executor = { version = "0.9", features = [
    "arch-cortex-m",
    "executor-thread",
    "executor-interrupt",
    "defmt",
], optional = true }
embassy-boot-nrf = { version = "0.10.0", optional = true }
# embassy-rp = { version = "0.2", features = ["time-driver"], optional = true }
defmt-rtt = { version = "1.0.0", features = ["disable-blocking-mode"], optional = true }
panic-probe = { version = "1.0.0", features = ["print-defmt"], optional = true }
ssd1680 = { version = "0.16", path = "./vendor/ssd1680", optional = true }
sx126x = { version = "0.3.0", optional = true }
embedded-hal = { version = "1.0", optional = true }
embedded-hal-bus = { version = "0.2", features = ["async"], optional = true }
heapless = { version = "0.9.2", optional = true }
nrf-mpsl = { git = "https://github.com/alexmoon/nrf-sdc.git", rev = "df7e3b4f363275e2c9ad42005758cf3eb8a798e0", features = ["nrf52840"], optional = true }
nrf-sdc  = { git = "https://github.com/alexmoon/nrf-sdc.git", rev = "df7e3b4f363275e2c9ad42005758cf3eb8a798e0", features = ["nrf52840", "peripheral"], optional = true }
# dev-disable-csprng-seed-requirement: skips the panic if the SM PRNG hasn't been seeded.
# The nrf-sdc 0.4 API borrows `rng` for the SDC's lifetime, making it unavailable for
# seeding trouble-host. This is safe for now because we do not initiate pairing.
# TODO: seed the SM properly before enabling bonding in production.
trouble-host = { version = "0.6", features = ["defmt", "security", "dev-disable-csprng-seed-requirement"], optional = true }
tickv    = { version = "2.0", optional = true }
meshcore = { path = "./vendor/meshcore", optional = true }


[package.metadata.tools]
# cargo install uf2conv
uf2conv = "0.1"

[profile.dev]
debug = 2
opt-level = 1
lto = false

[profile.release]
debug = 2
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[features]
# default = ["simulator"]
# default = ["embassy"]
simulator = ["embedded-graphics-simulator"]
embassy = [
    "cortex-m",
    "cortex-m-rt",
    "defmt",
    "defmt-rtt",
    "embassy-executor",
    "embassy-futures",
    "embassy-nrf",
    "embassy-sync",
    "embassy-time",
    "embedded-hal",
    "embedded-hal-bus",
    "fixed",
    "heapless",
    "panic-probe",
    "embassy-boot-nrf",
    "ssd1680",
    "static_cell",
    "sx126x",
    "nrf-mpsl",
    "nrf-sdc",
    "trouble-host",
    "tickv",
    "meshcore",
]

# [workspace]
# harness = false

[lib]
harness = false

[[bin]]
name = "simulator"
path = "src/bin/simulator.rs"
required-features = ["simulator"]


[[bin]]
name = "embassy"
path = "src/bin/embassy.rs"
required-features = ["embassy"]
harness = false
