[package]
name = "bornhack-aegg"
version = "0.2.0"
edition = "2024"

[dependencies]
embedded-graphics = { version = "0.8" }
# Larger mono fonts for the conference-badge name screen.  Stock
# embedded-graphics ascii fonts cap out at 10×20; profont adds the
# 12×22 / 16×30 sizes for medium-length names.
profont = { version = "0.7" }
# Even bigger fonts (~30–42 px tall) for short names on the
# conference-badge screen.  Different API from `MonoFont` — uses its
# own `FontRenderer` — but the only practical way to get glyphs that
# fill a 152×152 panel.
u8g2-fonts = { version = "0.7", default-features = false }

# Simulator libraries go here
embedded-graphics-simulator = { version = "0.8", optional = true }
defmt = { version = "1.0.1", optional = true }

# Embassy dependencies (only when embassy feature is enabled)

static_cell = { version = "2", optional = true }
cortex-m = { version = "0.7.6", features = [
    "inline-asm",
    "critical-section-single-core",
], optional = true }
cortex-m-rt = { version = "0.7.0", optional = true }
embassy-futures = { version = "0.1.2", optional = true }
embassy-sync = { version = "0.7", features = ["defmt"], optional = true }
embassy-time = { version = "0.5.0", features = [
    "defmt",
    "defmt-timestamp-uptime",
], optional = true }
embassy-nrf = { version = "0.9.0", features = [
    "defmt",
    "nrf52840",
    "time-driver-rtc1",
    "gpiote",
    "unstable-pac",
    "time",
    "qspi-multiwrite-flash",
], optional = true }
embassy-executor = { version = "0.9", features = [
    "arch-cortex-m",
    "executor-thread",
    "executor-interrupt",
    "defmt",
], optional = true }
# embassy-rp = { version = "0.2", features = ["time-driver"], optional = true }
defmt-rtt = { version = "1.0.0", features = [
    "disable-blocking-mode",
], optional = true }
panic-probe = { version = "1.0.0", features = ["print-defmt"], optional = true }
ssd1675 = { version = "0.6", path = "./vendor/ssd1675", optional = true }
sx126x = { version = "0.3.0", optional = true }
embedded-hal = { version = "1.0", optional = true }
embedded-hal-bus = { version = "0.2", features = ["async"], optional = true }
heapless = { version = "0.9.2", optional = true }
ed25519-dalek = { version = "2", default-features = false, optional = true }
sha2 = { version = "0.10", default-features = false, optional = true }
fasttime = { version = "0.1", default-features = false, optional = true }
nrf-mpsl = { git = "https://github.com/alexmoon/nrf-sdc.git", rev = "df7e3b4f363275e2c9ad42005758cf3eb8a798e0", features = [
    "nrf52840",
], optional = true }
nrf-sdc = { git = "https://github.com/alexmoon/nrf-sdc.git", rev = "df7e3b4f363275e2c9ad42005758cf3eb8a798e0", features = [
    "nrf52840",
    "peripheral",
], optional = true }
# dev-disable-csprng-seed-requirement: skips the panic if the SM PRNG hasn't been seeded.
# The nrf-sdc 0.4 API borrows `rng` for the SDC's lifetime, making it unavailable for
# seeding trouble-host. This is safe for now because we do not initiate pairing.
# TODO: seed the SM properly before enabling bonding in production.
trouble-host = { version = "0.6", features = [
    "defmt",
    "security",
    # HCI flow control: the host tells the controller how many RX buffers
    # it has, preventing the controller from sending more ACL data than
    # the packet pool can absorb.  Without this the controller fires
    # packets as fast as it can during TX bursts, starving the shared
    # pool and causing OutOfMemory on the RX path.
    "controller-host-flow-control",
    # trouble-host 0.6.0 has a bug: the controller-host-flow-control
    # feature configures HostBufferSize but the SetControllerToHostFlowControl
    # command is commented out, so the controller still sends ACL data
    # freely.  Larger pool gives the HCI runner more headroom during bursts.
    "default-packet-pool-size-32",
], optional = true }
rand_core = { version = "0.6", default-features = false, optional = true }
meshcore = { path = "./vendor/meshcore", optional = true }
meshcore-companion = { path = "./vendor/meshcore-companion", optional = true }
# Direct dep on ed25519-compact (also pulled in via meshcore) so we can
# add the `opt_size` feature.  Cargo unifies features across the dep
# graph, so meshcore's required `x25519` stays enabled and our `opt_size`
# is added on top — `inline(never)` on the field25519 arithmetic, smaller
# binary at the cost of some sign/verify throughput.
ed25519-compact = { version = "2", default-features = false, features = [
    "opt_size",
], optional = true }
ekv = { git = "https://github.com/embassy-rs/ekv.git", rev = "a7d0ce35", optional = true }
embassy-usb = { version = "0.6.0", default-features = false, optional = true }
qrcodegen-no-heap = { version = "1.8", default-features = false, optional = true }

[package.metadata.tools]
# cargo install uf2conv
uf2conv = "0.1"

[profile.dev]
debug = 2
opt-level = "z"
lto = "thin"
codegen-units = 1
panic = "abort"

[profile.release]
debug = 0
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

# Same optimisation as `release`, but keeps the symbol table so that
# probe-rs can locate `_defmt_version_` and decode the RTT log stream.
# Stripping has no effect on flash usage — the loaded sections (.text /
# .data) are identical — but it removes the symbols probe-rs needs.
[profile.release-hwtest]
inherits = "release"
strip = false
debug = 2

# Optimize all dependencies
[profile.dev.package."*"]
opt-level = "z"


[features]
# default = ["simulator"]
# default = ["embassy"]
game = []
signed-channel = ["heapless", "ed25519-dalek", "sha2"]
watch = ["heapless", "fasttime"]
mesh = [
    "sx126x",
    "nrf-mpsl",
    "nrf-sdc",
    "trouble-host",
    "rand_core",
    "meshcore",
    "meshcore-companion",
    "ed25519-compact",
    "qrcodegen-no-heap",
]
usb-storage = ["embassy-usb"]
simulator = ["embedded-graphics-simulator", "heapless", "game", "watch", "signed-channel"]
# Base nRF52840 embassy runtime (display, buttons, LEDs, buzzer — no radio/BLE).
embassy-base = [
    "cortex-m",
    "cortex-m-rt",
    "defmt",
    "defmt-rtt",
    "ekv",
    "embassy-executor",
    "embassy-futures",
    "embassy-nrf",
    "embassy-sync",
    "embassy-time",
    "embedded-hal",
    "embedded-hal-bus",
    "heapless",
    "panic-probe",
    "ssd1675",
    "static_cell",
    "watch",
    "signed-channel",
]
# Full build: game + mesh + USB storage.
embassy      = ["embassy-base", "game", "mesh", "usb-storage"]
# Game + USB storage (no LoRa/BLE mesh stack).
embassy-game = ["embassy-base", "game", "usb-storage"]
# Mesh only (no game, no USB storage).
embassy-mesh = ["embassy-base", "mesh"]
# Watch only (no game, no mesh) — `watch` is already pulled in by embassy-base.
embassy-watch = ["embassy-base"]
# Factory hardware test — minimal standalone firmware, no bootloader required.
# Verifies buttons, joystick, LoRa, battery, QSPI flash and drives LED/buzzer.
hwtest = [
    "cortex-m",
    "cortex-m-rt",
    "defmt",
    "defmt-rtt",
    "embassy-executor",
    "embassy-nrf",
    "embassy-sync",
    "embassy-time",
    "heapless",
    "panic-probe",
]

# [workspace]
# harness = false

[lib]

[[bin]]
name = "simulator"
path = "src/bin/simulator.rs"
required-features = ["simulator"]


[[bin]]
name = "simulate_game"
path = "src/bin/simulate_game.rs"
required-features = ["simulator"]

[[bin]]
name = "embassy"
path = "src/bin/embassy.rs"
required-features = ["embassy-base"]
harness = false

[[bin]]
name = "hwtest"
path = "src/bin/hwtest.rs"
required-features = ["hwtest"]
harness = false
