[package]
edition = "2024"
name = "nrf-aegg-bootloader"
version = "0.1.0"
description = "Custom USB-DFU bootloader for the CyberAegg badge"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
defmt           = { version = "1.0.1", optional = true }
defmt-rtt       = { version = "1.0.0", optional = true }

embassy-nrf = { version = "0.9.0", features = [
    "nrf52840",
    "time-driver-rtc1",
    "gpiote",
    "unstable-pac",
] }
cortex-m = { version = "0.7.6", features = [
    "inline-asm",
    "critical-section-single-core",
] }
cortex-m-rt     = { version = "0.7" }
embassy-sync    = { version = "0.7" }
embassy-executor = { version = "0.9", features = [
    "arch-cortex-m",
    "executor-thread",
], optional = true }
embassy-time    = { version = "0.5.0", optional = true }
embassy-usb     = { version = "0.5.1", optional = true }
embassy-futures = { version = "0.1.2", optional = true }
static_cell     = { version = "2", optional = true }

[features]
default = ["defmt", "dfu"]
defmt = [
    "dep:defmt",
    "dep:defmt-rtt",
    "embassy-nrf/defmt",
    "embassy-sync/defmt",
]
dfu = [
    "defmt",
    "dep:embassy-executor",
    "dep:embassy-usb",
    "dep:embassy-time",
    "dep:embassy-futures",
    "dep:static_cell",
    "embassy-usb/defmt",
    "embassy-time/defmt",
    "embassy-executor/defmt",
]

[profile.dev]
debug = 2
debug-assertions = true
incremental = false
opt-level = 'z'
overflow-checks = true

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 'z'
overflow-checks = false

[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false
